# pocketqua

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_phase1_core.py
app/: config.py  logging.py  main.py  security.py
app/api/routes/: health.py  holdings.py  (+3 more)
app/db/: session.py
app/models/: __init__.py  exchange_account.py  manual_holding.py  mixins.py  transactions_ledger.py  user.py  wallet_snapshot.py
app/repositories/: exchange_account_repository.py  ledger_repository.py  manual_holdings_repository.py  pnl_repository.py  summary_repository.py  wallet_snapshot_repository.py
app/schemas/: common.py  holdings.py  pnl.py  summary.py  sync.py
app/services/: holdings_service.py  ledger_normalizer.py  market_data_service.py  pnl_service.py  summary_service.py  sync_service.py
backend/app/: main.py
backend/tests/: conftest.py  test_actions_filters.py  test_api_flow.py  test_csv_import.py  test_journal_api.py  test_portfolio_calc.py  test_price_priority.py  test_price_sync.py  test_risk_api.py  test_risk_rules.py  test_rule_engine.py  test_staking_api.py  test_staking_rules.py  test_sync_api.py  test_telegram_api_support.py
bot/: client.py  formatters.py  handlers.py  main.py  scheduler.py
bot/tests/: test_formatters.py  test_handlers.py  test_scheduler.py
tests/: test_bybit_signature.py  test_health_routes.py  test_holdings_service.py  test_ledger_normalizer.py  test_ledger_repository.py  test_mappers.py  test_pnl_service.py  test_summary_service.py
(+26 files in other folders)
