[project]
name = "pocketquant"
version = "0.1.0"
description = "PocketQuant Phase 1: Core API + Rules Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.40",
  "alembic>=1.16.0",
  "httpx>=0.28.0",
  "python-telegram-bot>=22.3",
  "apscheduler>=3.10.4",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.1.0",
  "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "bot*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "bot/tests"]
pythonpath = ["."]
