[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketquant"
version = "0.1.0"
description = "PocketQuant phase 1 backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "alembic==1.16.5",
  "psycopg[binary]==3.2.9",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-dotenv==1.1.1",
  "requests==2.32.4",
  "cryptography==45.0.6",
  "apscheduler==3.11.0",
  "python-json-logger==3.2.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "httpx==0.28.1"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
